# sRAT

./: .gitignore  README.md  STYLE.css  pyproject.toml  requirements.txt  sRAT.spec  sRAT_gui.py  srat_cli.py
srna_align/: cli.py  export.py  index.py  io.py  search.py
tests/: test_golden.py
